tests/should_fail/logic_alias/alias_to_program_function.stderr
error: called program function `greater_than` in logic context
 --> alias_to_program_function.rs:9:15
  |
9 | #[logic_alias(greater_than(a@, b@))]
  |               ^^^^^^^^^^^^

error: aborting due to 1 previous error

